--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
   <div class="container">
-    <div class="left_Side"></div>
+    <div class="left_Side">
+      <div class="profileText">
+        <div class="imgBx">
+          <img src="img/photo.jpg" alt="photo">
+        </div>
+        <h2>Pavel Shapialevich<br><span>Web Developer</span></h2>
+      </div>
+    </div>
+
     <div class="right_Side"></div>
   </div>
 </body>
