--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <span class="text">pshepel03@gmail.com</span>
           </li>
           <li>
-            <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-            <span class="text">www.mywebsite.com</span>
+            <span class="icon"><i class="fa fa-github"></i></span>
+            <span class="text">github.com/PavelShep</span>
           </li>
           <li>
             <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
@@ -42,6 +42,48 @@
           </li>
         </ul>
       </div>
+
+      <div class="contactInfo education">
+        <h3 class="title">Education</h3>
+        <ul>
+          <li>
+            <h5>2022 - present</h5>
+            <h4>Master Degree in IT</h4>
+            <h4>The Jacob of Paradies University</h4>
+          </li>
+        </ul>
+      </div>
+
+      <div class="contactInfo language">
+        <h3 class="title">Languages</h3>
+        <ul>
+          <li>
+            <span class="text">English</span>
+            <span class="percent">
+              <div style="width: 50%;"></div>
+            </span>
+          </li>
+          <li>
+            <span class="text">Polish</span>
+            <span class="percent">
+              <div style="width: 60%;"></div>
+            </span>
+          </li>
+          <li>
+            <span class="text">Russian</span>
+            <span class="percent">
+              <div style="width: 90%;"></div>
+            </span>
+          </li>
+          <li>
+            <span class="text">Belarusian</span>
+            <span class="percent">
+              <div style="width: 70%;"></div>
+            </span>
+          </li>
+        </ul>
+      </div>
+
     </div>
       
     <div class="right_Side"></div>
