add Profile and Experience sections

--- a/index.html
+++ b/index.html
@@ -83,10 +83,43 @@
           </li>
         </ul>
       </div>
-
     </div>
       
-    <div class="right_Side"></div>
+    <div class="right_Side">
+      <div class="about">
+        <h2 class="title2">Profile</h2>
+        <p>
+          Hello! I'm Pavel Shapialevich and I am an aspiring web developer with a passion for creating unique and innovative web applications.
+          My goal is to create quality and user interfaces that make life on the web easier and more fun.   
+          <br>
+          I am looking for new opportunities to grow and develop web development. 
+          I invite you to explore my professional accomplishments and experience below. 
+          I will be glad to discuss cooperation opportunities and answer any questions.     
+        </p>
+      </div>
+
+      <div class="about">
+        <h2 class="title2">Experience</h2>
+        <div class="box">
+          <div class="year_company">
+            <h5>2021-2022</h5>
+            <h5>IT Academy STEP</h5>
+          </div>
+          <div class="text">
+            <h4>Teacher of computer science (IT courses)</h4>
+            <p>
+              Worked for six months in the firm's branch in Grodno, Belarus.
+              I taught the basics of web development.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="about skills">
+        <h2 class="title2">Professional Skills</h2>
+      </div>
+
+    </div>
   </div>
 </body>
 </html>
