--- a/index.html
+++ b/index.html
@@ -117,6 +117,52 @@
 
       <div class="about skills">
         <h2 class="title2">Professional Skills</h2>
+        <div class="box">
+          <h4>HTML</h4>
+          <div class="percent">
+            <div style="width: 60%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>CSS</h4>
+          <div class="percent">
+            <div style="width: 50%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>Javascript</h4>
+          <div class="percent">
+            <div style="width: 45%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>Ruby</h4>
+          <div class="percent">
+            <div style="width: 50%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>Ruby on Rails</h4>
+          <div class="percent">
+            <div style="width: 60%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>C#</h4>
+          <div class="percent">
+            <div style="width: 40%;"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="about interest">
+        <h2 class="title2">Interest</h2>
+        <ul>
+          <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
+          <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
+          <li><i class="fa fa-flag-checkered" aria-hidden="true"></i> Sports</li>
+          <li><i class="fa fa-hourglass-end" aria-hidden="true"></i> History</li>
+        </ul>
       </div>
 
     </div>
