--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <ul>
           <li>
             <h5>2022 - present</h5>
-            <h4>Master Degree in IT</h4>
+            <h4>bachelor Degree in IT</h4>
             <h4>The Jacob of Paradies University</h4>
           </li>
         </ul>
