--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <div class="container">
     <div class="left_Side">
@@ -22,19 +26,19 @@
         <ul>
           <li>
             <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-            <span class="text">+48 510 378 193</span>
+            <a href="tel:+48510378193" class="text">+48 510 378 193</a>
           </li>
           <li>
             <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-            <span class="text">pshepel03@gmail.com</span>
+            <a href="mailto:pshepel03@gmail.com" class="text">pshepel03@gmail.com</a>
           </li>
           <li>
             <span class="icon"><i class="fa fa-github"></i></span>
-            <span class="text">github.com/PavelShep</span>
+            <a href="https://github.com/PavelShep" class="text">github.com/PavelShep</a>
           </li>
           <li>
             <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-            <span class="text">Gorzow Wlk, Poland</span>
+            <a href="https://www.google.com/maps?q=Gorzow+Wlk,+Poland" class="text">Gorzow Wlk, Poland</a>
           </li>
         </ul>
       </div>
@@ -43,9 +47,14 @@
         <h3 class="title">Education</h3>
         <ul>
           <li>
+            <h5>2020 - 2022 (is not completed)</h5>
+            <h4>bachelor Degree in Physics and IT</h4>
+            <h4>State University of Grodno, Belarus</h4>
+          </li>
+          <li>
             <h5>2022 - present</h5>
             <h4>bachelor Degree in IT</h4>
-            <h4>The Jacob of Paradies University</h4>
+            <h4>The Jacob of Paradies University, Poland</h4>
           </li>
         </ul>
       </div>
@@ -77,20 +86,30 @@
               <div style="width: 70%;"></div>
             </span>
           </li>
+          <li>
+            <span class="text">Ukrainian</span>
+            <span class="percent">
+              <div style="width: 25%;"></div>
+            </span>
+          </li>
         </ul>
       </div>
     </div>
-      
+
     <div class="right_Side">
       <div class="about">
         <h2 class="title2">Profile</h2>
         <p>
-          Hello! I'm Pavel Shapialevich and I am an aspiring web developer with a passion for creating unique and innovative web applications.
-          My goal is to create quality and user interfaces that make life on the web easier and more fun.   
+          Hello! I'm Pavel Shapialevich and I'm a young(20 years old) aspiring web developer with a burning interest in
+          the world of information technology. I am dedicated to learning the basics of web development, including HTML,
+          CSS, and JavaScript, and am committed to improving my skills in this area. My passion for creating websites
+          and applications drives me to look for new projects and opportunities to apply my knowledge.
           <br>
-          I am looking for new opportunities to grow and develop web development. 
-          I invite you to explore my professional accomplishments and experience below. 
-          I will be glad to discuss cooperation opportunities and answer any questions.     
+          <br>
+          I am open to learning and willing to collaborate with experienced professionals to deepen my understanding of
+          web development and expand my skill set. I consider my goals to be participation in exciting projects,
+          creation of high-quality web solutions and constant development in this dynamic field. Ready to learn and
+          contribute to a team focused on achieving outstanding results in the field of web development.
         </p>
       </div>
 
@@ -98,14 +117,30 @@
         <h2 class="title2">Experience</h2>
         <div class="box">
           <div class="year_company">
-            <h5>2021-2022</h5>
+            <h5>01.2022-06.2022</h5>
             <h5>IT Academy STEP</h5>
           </div>
           <div class="text">
             <h4>Teacher of computer science (IT courses)</h4>
             <p>
-              Worked for six months in the firm's branch in Grodno, Belarus.
-              I taught the basics of web development.
+              I worked at Academy "STEP" as a teacher for six months. As part of this role, I taught students the
+              basics of web development, including HTML, CSS and JavaScript, as well as the basics of Python
+              programming. My work at IT STEP Academy allowed me to develop my teaching and knowledge transfer skills in
+              the field of information technology.
+            </p>
+          </div>
+        </div>
+        <div class="box">
+          <div class="year_company">
+            <h5>07.2023-08.2023</h5>
+            <h5>e-LEA TECHNOLOGIES</h5>
+          </div>
+          <div class="text">
+            <h4>Trainee</h4>
+            <p>
+              During my internship at E-lea, my experience was 2 months.
+              During this time I gained experience with the Ruby on Rails framework,
+              although unfortunately my activity and contribution to projects remained limited.
             </p>
           </div>
         </div>
@@ -120,7 +155,7 @@
           </div>
         </div>
         <div class="box">
-          <h4>CSS</h4>
+          <h4>CSS/SASS</h4>
           <div class="percent">
             <div style="width: 50%;"></div>
           </div>
@@ -129,6 +164,12 @@
           <h4>Javascript</h4>
           <div class="percent">
             <div style="width: 45%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>PHP</h4>
+          <div class="percent">
+            <div style="width: 30%;"></div>
           </div>
         </div>
         <div class="box">
@@ -144,9 +185,15 @@
           </div>
         </div>
         <div class="box">
-          <h4>C#</h4>
+          <h4>C#(.NET)</h4>
           <div class="percent">
-            <div style="width: 40%;"></div>
+            <div style="width: 30%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>Python</h4>
+          <div class="percent">
+            <div style="width: 30%;"></div>
           </div>
         </div>
       </div>
@@ -164,4 +211,5 @@
     </div>
   </div>
 </body>
+
 </html>
