--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
             <h4>bachelor Degree in IT</h4>
             <h4>The Jacob of Paradies University, Poland</h4>
           </li>
+          <li>
+            <h5>05.2023 - 07.2023</h5>
+            <h4><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-52f7e81d-defe-4966-85d3-3f8db451a17f.jpg?v=1693141539000">The Complete Ruby on Rails Developer Course</a></h4>
+            <h4>Udemy</h4>
+          </li>
         </ul>
       </div>
 
