--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           </li>
           <li>
             <span class="icon"><i class="fa fa-github"></i></span>
-            <a href="https://github.com/PavelShep" class="text">github.com/PavelShep</a>
+            <a href="https://github.com/PavelShep" target="_blank" class="text">github.com/PavelShep</a>
           </li>
           <li>
             <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-            <a href="https://www.google.com/maps?q=Gorzow+Wlk,+Poland" class="text">Gorzow Wlk, Poland</a>
+            <a href="https://www.google.com/maps?q=Gorzow+Wlk,+Poland" target="_blank" class="text">Gorzow Wlk, Poland</a>
           </li>
         </ul>
       </div>
@@ -58,7 +58,12 @@
           </li>
           <li>
             <h5>05.2023 - 07.2023</h5>
-            <h4><a href="https://udemy-certificate.s3.amazonaws.com/image/UC-52f7e81d-defe-4966-85d3-3f8db451a17f.jpg?v=1693141539000">The Complete Ruby on Rails Developer Course</a></h4>
+            <h4><a href="https://www.udemy.com/certificate/UC-52f7e81d-defe-4966-85d3-3f8db451a17f/" target="_blank">The Complete Ruby on Rails Developer Course</a></h4>
+            <h4>Udemy</h4>
+          </li>
+          <li>
+            <h5>09.2023 - 11.2023</h5>
+            <h4><a href="https://www.udemy.com/certificate/UC-2b84b49e-573f-4780-b450-e415063658ae/" target="_blank">Web developer</a></h4>
             <h4>Udemy</h4>
           </li>
         </ul>
