Update Info about me

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
           </li>
           <li>
             <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-            <a href="https://www.google.com/maps?q=Gorzow+Wlk,+Poland" target="_blank" class="text">Gorzow Wlk, Poland</a>
+            <a href="https://www.google.com/maps?q=Gorzow+Wlk,+Poland" target="_blank" class="text">Gorzow Wlkp,
+              Poland</a>
           </li>
         </ul>
       </div>
@@ -52,18 +53,20 @@
             <h4>State University of Grodno, Belarus</h4>
           </li>
           <li>
-            <h5>2022 - present</h5>
+            <h5>2022 - 2026</h5>
             <h4>bachelor Degree in IT</h4>
             <h4>The Jacob of Paradies University, Poland</h4>
           </li>
           <li>
             <h5>05.2023 - 07.2023</h5>
-            <h4><a href="https://www.udemy.com/certificate/UC-52f7e81d-defe-4966-85d3-3f8db451a17f/" target="_blank">The Complete Ruby on Rails Developer Course</a></h4>
+            <h4><a href="https://www.udemy.com/certificate/UC-52f7e81d-defe-4966-85d3-3f8db451a17f/" target="_blank">The
+                Complete Ruby on Rails Developer Course</a></h4>
             <h4>Udemy</h4>
           </li>
           <li>
             <h5>09.2023 - 11.2023</h5>
-            <h4><a href="https://www.udemy.com/certificate/UC-2b84b49e-573f-4780-b450-e415063658ae/" target="_blank">Web developer</a></h4>
+            <h4><a href="https://www.udemy.com/certificate/UC-2b84b49e-573f-4780-b450-e415063658ae/" target="_blank">Web
+                developer</a></h4>
             <h4>Udemy</h4>
           </li>
         </ul>
@@ -81,7 +84,7 @@
           <li>
             <span class="text">Polish</span>
             <span class="percent">
-              <div style="width: 60%;"></div>
+              <div style="width: 65%;"></div>
             </span>
           </li>
           <li>
@@ -93,13 +96,13 @@
           <li>
             <span class="text">Belarusian</span>
             <span class="percent">
-              <div style="width: 70%;"></div>
+              <div style="width: 65%;"></div>
             </span>
           </li>
           <li>
             <span class="text">Ukrainian</span>
             <span class="percent">
-              <div style="width: 25%;"></div>
+              <div style="width: 20%;"></div>
             </span>
           </li>
         </ul>
@@ -110,47 +113,96 @@
       <div class="about">
         <h2 class="title2">Profile</h2>
         <p>
-          Hello! I'm Pavel Shapialevich and I'm a young(20 years old) aspiring web developer with a burning interest in
-          the world of information technology. I am dedicated to learning the basics of web development, including HTML,
-          CSS, and JavaScript, and am committed to improving my skills in this area. My passion for creating websites
-          and applications drives me to look for new projects and opportunities to apply my knowledge.
-          <br>
-          <br>
-          I am open to learning and willing to collaborate with experienced professionals to deepen my understanding of
-          web development and expand my skill set. I consider my goals to be participation in exciting projects,
-          creation of high-quality web solutions and constant development in this dynamic field. Ready to learn and
-          contribute to a team focused on achieving outstanding results in the field of web development.
+          Hi, I'm Pavel Shapialevich. I'm a junior web developer, currently studying and gaining practical experience through
+          internships and side projects. I got into development because I liked the idea of building things that people
+          can actually use — and that interest hasn't gone away. I'm still early in my career, but I take my work
+          seriously and try to get better with every project. I work well with others, communicate openly, and don't
+          mind asking questions when I'm stuck. If you're looking for someone motivated and easy to work with, feel free
+          to reach out..
         </p>
       </div>
 
       <div class="about">
         <h2 class="title2">Experience</h2>
+
         <div class="box">
           <div class="year_company">
-            <h5>01.2022-06.2022</h5>
-            <h5>IT Academy STEP</h5>
+            <h5>02.2022 - 06.2022</h5>
+            <h5>IT Academy STEP, Belarus</h5>
           </div>
           <div class="text">
-            <h4>Teacher of computer science (IT courses)</h4>
+            <h4>Teacher of Computer Science</h4>
             <p>
-              I worked at Academy "STEP" as a teacher for six months. As part of this role, I taught students the
-              basics of web development, including HTML, CSS and JavaScript, as well as the basics of Python
-              programming. My work at IT STEP Academy allowed me to develop my teaching and knowledge transfer skills in
-              the field of information technology.
+              I worked at Academy "STEP" as a teacher for 4 months. As part of this role, I taught
+              students the basics of web development, including HTML, CSS and JavaScript, as well as
+              the basics of Python programming. My work at IT STEP Academy allowed me to develop my
+              teaching and knowledge transfer skills in the field of information technology.
             </p>
           </div>
         </div>
+
         <div class="box">
           <div class="year_company">
-            <h5>07.2023-08.2023</h5>
-            <h5>e-LEA TECHNOLOGIES</h5>
+            <h5>06.2023 - 07.2023</h5>
+            <h5>E-LEA TECHNOLOGIES, Poland</h5>
           </div>
           <div class="text">
-            <h4>Trainee</h4>
+            <h4>Student Trainee</h4>
             <p>
-              During my internship at E-lea, my experience was 2 months.
-              During this time I gained experience with the Ruby on Rails framework,
-              although unfortunately my activity and contribution to projects remained limited.
+              During my internship at E-lea, my experience was 2 months. During this time I gained
+              experience with the Ruby on Rails framework, although unfortunately my activity and
+              contribution to projects remained limited.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="year_company">
+            <h5>07.2024</h5>
+            <h5>School Complex in Rzepin, Poland</h5>
+          </div>
+          <div class="text">
+            <h4>IT Assistant</h4>
+            <p>
+              As an Informatics Assistant at an educational institution, I supported the Informatics
+              department by handling various tasks, including administering computers, configuring and
+              maintaining the surveillance camera system, and managing network equipment such as routers
+              and switches. I was also involved in ensuring the proper functioning of the institution's
+              IT infrastructure and providing technical assistance where needed.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="year_company">
+            <h5>08.2024</h5>
+            <h5>MAKEITGOODAGAIN, Denmark</h5>
+          </div>
+          <div class="text">
+            <h4>Software Developer Intern</h4>
+            <p>
+              During my internship at the Danish startup MakeItGoodAgain, I worked primarily with the
+              Ruby on Rails framework. Most of my tasks were focused on front-end development, where I
+              gained hands-on experience working on UI components and improving the user experience.
+              Although my contribution was centered around front-end tasks, I also familiarised myself
+              with back-end processes and the overall development workflow within the team.
+            </p>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="year_company">
+            <h5>03.2025 - 06.2025</h5>
+            <h5>Zespół Szkół Elektrycznych w Gorzowie Wlkp, Poland</h5>
+          </div>
+          <div class="text">
+            <h4>Student Trainee</h4>
+            <p>
+              In the role of technical assistant at the school, I was responsible for servicing and
+              optimising computers, implementing and supervising the security camera system, as well
+              as configuring and maintaining the network infrastructure, including routers, switches
+              and access points. In addition, I monitored the operation of IT systems, prevented
+              failures and provided immediate hardware and software support to users.
             </p>
           </div>
         </div>
@@ -212,7 +264,6 @@
         <h2 class="title2">Interest</h2>
         <ul>
           <li><i class="fa fa-book" aria-hidden="true"></i> Reading</li>
-          <li><i class="fa fa-cutlery" aria-hidden="true"></i> Cooking</li>
           <li><i class="fa fa-flag-checkered" aria-hidden="true"></i> Sports</li>
           <li><i class="fa fa-hourglass-end" aria-hidden="true"></i> History</li>
         </ul>
