add project section

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
       <div class="about">
         <h2 class="title2">Profile</h2>
         <p>
-          Hi, I'm Pavel Shapialevich. I'm a junior web developer, currently studying and gaining practical experience through
+          Hi, I'm Pavel Shapialevich. I'm a junior web developer, currently studying and gaining practical experience
+          through
           internships and side projects. I got into development because I liked the idea of building things that people
           can actually use — and that interest hasn't gone away. I'm still early in my career, but I take my work
           seriously and try to get better with every project. I work well with others, communicate openly, and don't
@@ -205,6 +206,22 @@
               failures and provided immediate hardware and software support to users.
             </p>
           </div>
+        </div>
+      </div>
+
+      <div class="about projects-section">
+        <h2 class="title2">Projects</h2>
+        <div class="project-card">
+          <a href="https://github.com/PavelShep/polish-sign-language-alphabet-recognition" target="_blank"
+            class="project-name">
+            Polish Sign Language Alphabet Recognition <i class="fa fa-github"></i>
+          </a>
+          <span class="project-tech">Python &middot; OpenCV &middot; TensorFlow / Keras</span>
+          <p class="project-description">
+            A computer vision system that recognises the Polish Sign Language (PJM) alphabet in real time.
+            The model detects hand gestures via a camera and classifies them into the corresponding letters.
+            Trained and tested end-to-end, from data collection to inference.
+          </p>
         </div>
       </div>
 
