--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           can actually use — and that interest hasn't gone away. I'm still early in my career, but I take my work
           seriously and try to get better with every project. I work well with others, communicate openly, and don't
           mind asking questions when I'm stuck. If you're looking for someone motivated and easy to work with, feel free
-          to reach out..
+          to reach out.
         </p>
       </div>
 
@@ -216,7 +216,7 @@
             class="project-name">
             Polish Sign Language Alphabet Recognition <i class="fa fa-github"></i>
           </a>
-          <span class="project-tech">Python &middot; OpenCV &middot; TensorFlow / Keras</span>
+          <span class="project-tech">Python &middot; OpenCV &middot; TensorFlow / Keras &middot; HTML &middot; CSS &middot; Javascript</span>
           <p class="project-description">
             A computer vision system that recognises the Polish Sign Language (PJM) alphabet in real time.
             The model detects hand gestures via a camera and classifies them into the corresponding letters.
@@ -264,7 +264,7 @@
           </div>
         </div>
         <div class="box">
-          <h4>C#(.NET)</h4>
+          <h4>C#</h4>
           <div class="percent">
             <div style="width: 30%;"></div>
           </div>
